# Slicer-Core

./: .gitignore  CMakeLists.txt  CMakePresets.json  DELIVERY_SUMMARY.md  FILE_MANIFEST.md  ONBOARDING.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  marc_build_config.json  setup_mesh_io.ps1  vcpkg.json  verify-build.ps1
cmake/: CopyDlls.cmake  MarcSLM_CoreConfig.cmake.in
cmake/Modules/: README.md
docs/: MarcFormat_Delivery.md  MarcFormat_Specification.md  MeshIO_DELIVERY.md  MeshIO_QUICKSTART.md  MeshIO_README.md  MeshProcessor_Delivery.md  MeshProcessor_Specification.md
include/MarcSLM/: MarcAPI.hpp  SlmPrint.hpp
include/MarcSLM/Core/: BuildPlate.hpp  BuildStyleManager.hpp  Config.hpp  ErrorState.hpp  InternalModel.hpp  Logger.hpp  MarcFile.hpp  MarcFormat.hpp  SVGExporter.hpp  SlmConfig.hpp  SlmConfigReader.hpp  Types.hpp
include/MarcSLM/Core/BuildPlate/: BuildPlatePreparator.hpp  BuildTypes.hpp  LayerExporter.hpp  LayerHeightGenerator.hpp  ModelPlacement.hpp  OverhangDetector.hpp  SupportGenerator.hpp  SurfaceClassifier.hpp
include/MarcSLM/Geometry/: MeshProcessor.hpp  README.md  TriMesh.hpp
include/MarcSLM/IO/: MeshData.hpp  MeshIO.hpp  MeshIOIntegration.hpp
include/MarcSLM/PathPlanning/: HatchGenerator.hpp  README.md  ScanVectorClipper.hpp
include/MarcSLM/Thermal/: ClipperBoolean.hpp  ContourHatchSplitter.hpp  LayerPolygonExtractor.hpp  README.md  RegionClassifier.hpp  ScanSegmentClassifier.hpp  ShellDecomposer.hpp  ThermalMaskGenerator.hpp  ThermalRegionHatcher.hpp  ThermalSegmentTypes.hpp
install/models/: MotorStator.stl  STLBMS.stl  bridge2.stl  bunny.stl  config.json  everything1.3mf  femure.stl
install/output/buildplate/: slicefile.marc
install/output/buildplate/SvgLayers_slm/: index.html
src/: MarcAPI.cpp  SlmPrint.cpp  io_example.cpp  main.cpp
src/Core/: BuildPlate.cpp  BuildStyleManager.cpp  ErrorState.cpp  Logger.cpp  MarcFile.cpp  README.md  SVGExporter.cpp  SlmConfigReader.cpp
src/Core/BuildPlate/: BuildPlatePreparator.cpp  BuildTypes.cpp  LayerExporter.cpp  LayerHeightGenerator.cpp  ModelPlacement.cpp  OverhangDetector.cpp  SupportGenerator.cpp  SurfaceClassifier.cpp
src/Geometry/: MeshProcessor.cpp  README.md  TriMesh.cpp
src/IO/: MeshIO.cpp
src/PathPlanning/: HatchGenerator.cpp  README.md  ScanVectorClipper.cpp
src/Thermal/: README.md  ScanSegmentClassifier.cpp  ThermalRegionHatcher.cpp
tests/: CMakeLists.txt  README.md  test_build_plate.cpp  test_build_plate_preparation.cpp  test_build_style.cpp  test_hatch_generator.cpp  test_marc_file_io.cpp  test_marc_format.cpp  test_mesh_io.cpp  test_mesh_processor.cpp  test_scan_segment_classifier.cpp  test_slm_config.cpp  test_thermal_region_hatcher.cpp  test_thermal_segments.cpp  test_types.cpp
